# weather-app

./: .gitignore  README.md  config.toml  get_raw_data.py  prek.toml  pyproject.toml  requirements.txt  test_get_raw_data.py
.github/workflows/: ci.yaml
data/raw/: raw_2026-02-20.json  raw_2026-02-21.json
data/validated/: daily_data_2026-02-21.parquet  hourly_data_2026-02-21.parquet
src/: dashboard.py  get_raw_data.py  get_raw_data_historical.py  load_to_duckdb.py  utils.py  validate_raw_data.py
tests/functional/: test_get_raw_data_f.py
tests/unit/: test_get_raw_data.py
