[project]
name = "weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dbt-duckdb>=1.10.1",
    "duckdb>=1.4.4",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "prek>=0.3.3",
    "ruff>=0.15.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
